# fingerflow

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
scripts/: convert_verify_net.py  run_backend_checks.py
src/fingerflow/: __init__.py
src/fingerflow/extractor/: __init__.py  classify_net.py  core_net.py  extractor.py  minutiae_net.py
src/fingerflow/extractor/CoreNet/: core_net_model.py  custom_layers.py  utils.py
src/fingerflow/matcher/: __init__.py  matcher.py  verify_net.py
src/fingerflow/matcher/VerifyNet/: utils.py
src/fingerflow_torch/: __init__.py  export.py
src/fingerflow_torch/extractor/: __init__.py  blocks.py  minutiae_net.py
src/fingerflow_torch/matcher/: __init__.py  verify_net.py
test/: test_backend_parity.py  test_backend_registry.py  test_torch_backend.py
test/matcher/VerifyNet/: test_utils.py
