[metadata]
name = fingerflow
version = 3.0.1
author = Jakub Arendac
author_email = jakub.arendac105@gmail.com
description = FingerFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakubarendac/fingerflow
project_urls =
    Bug Tracker = https://github.com/jakubarendac/fingerflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib >= 3.8
    numpy >= 1.26
    opencv-python >= 4.9
    pandas >= 2.2
    scikit-image >= 0.22
    scipy >= 1.11
    tensorflow >= 2.15

[options.packages.find]
where = src